[gd_scene load_steps=6 format=3 uid="uid://6sibrffc2ni7"]

[ext_resource type="Texture2D" uid="uid://dtd0wy3l6ohhq" path="res://assets/ui/lemon_chiffon_normal.png" id="1_16n21"]
[ext_resource type="Script" uid="uid://d0sq5gmsn0mp7" path="res://components/apps/lifestylist/life_stylist.gd" id="1_80bik"]
[ext_resource type="PackedScene" uid="uid://p3nf4gwmvex1" path="res://components/apps/lifestylist/lifestyle_row.tscn" id="2_80bik"]
[ext_resource type="Texture2D" uid="uid://ulfy2yoxctqv" path="res://assets/logos/monocle_placeholder.png" id="3_5mbct"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8oiat"]
texture = ExtResource("1_16n21")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="LifeStylist" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_8oiat")
script = ExtResource("1_80bik")
lifestyle_row_scene = ExtResource("2_80bik")
app_title = "LifeStylist"
app_icon = ExtResource("3_5mbct")
default_window_size = Vector2(800, 650)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CategoryList" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/CategoryList"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0.522189, 2.88785e-07, 1)
theme_override_font_sizes/font_size = 48
text = "LifeStylist"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="WeeklyCostLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Weekly Cost:"

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="DailyCostLabel" type="Label" parent="MarginContainer/VBoxContainer2/Footer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Daily Cost (rent & insurance not included):"

[node name="DailyCostCountdownLabel" type="Label" parent="MarginContainer/VBoxContainer2/Footer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
